--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Avinash Portfolio</title>
-    <link rel="shortcut icon" href="../src/media/webside_logo.png">
-</head>
-<body>
-    <div id="root"></div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Avinash Portfolio</title>
+	</head>
+	<body>
+		<div id="root"></div>
+	</body>
 </html>
- <script src="../index.js"></script>
+<script src="../index.js"></script>
