--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,6 @@
 	<body>
 		<div id="root"></div>
 	</body>
+	<script src="https://smtpjs.com/v3/smtp.js"></script>
 </html>
 <script src="../index.js"></script>
